--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Khiungmong Home</h1>
+        <h1>Welcome to Khiungmong Home | Family Website
+        </h1>
     </header>
 
     <main>
