--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <h2>About Our Family</h2>
         <p>Khiungmong Home is a warm and joyful place, filled with love and laughter. We are a happy family of 7 siblings, always supporting each other and creating wonderful memories together.</p>
         
-        <h2>Contact</h2>
+        <h2>Contact:0987654321</h2>
         <p>For any queries or visits, reach out via email at <a href="mailto:suthongwaza@gmail.com">suthongwaza@gmail.com</a>.</p>
     </main>
 
